# googai_congress

./: .gcloudignore  .gitignore  CLAUDE.md  README.md  cloudbuild.yaml  usenix2022.docx
MetricLens_AI/: README.md
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  db.py  main.py  models.py  repositories.py  schemas.py  seed.py  services.py  services_gcp.py  services_livetest.py
backend/app/api/: deps.py  routes_analysis.py  routes_catalog.py  routes_gcp.py  routes_history.py  routes_hosts.py  routes_livetest.py  routes_metrics.py
backend/app/core/: evaluation.py  forecaster.py  livetest.py  machine_types.py  optimizer.py  workload.py
backend/app/integrations/: gcp.py
backend/tests/: conftest.py  test_api.py  test_evaluation.py  test_forecaster.py  test_gcp.py  test_livetest.py  test_machine_types.py  test_optimizer.py  test_workload.py
docs/: 01_functional_spec.md  02_architecture_volume.md  03_api_specification.md  04_database_design.md  05_sequence_diagram.md  06_infrastructure_layout.md  07_test_specification.md  08_competitive_analysis.md  09_workload_modeling.md  10_uml_models.md  11_model_evaluation.md  12_limitations.md  13_model_math.md  development_report.md  development_report_usenix.docx  development_report_usenix_kr.docx  metriclens_deck.pptx  metriclens_deck_kr.pptx
frontend/: .dockerignore  Dockerfile  README.md  app.yaml  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
limitations_review/: index.md
scripts/: analyze_limits.sh  deploy.sh  (+13 more)
(+44 files in other folders)
